--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -77,6 +77,9 @@
 .mt-4 {
     margin-top: 1rem
 }
+.block {
+    display: block
+}
 .inline-block {
     display: inline-block
 }
@@ -429,6 +432,9 @@ body {
 .focus\:ring-offset-white:focus {
     --tw-ring-offset-color: #fff
 }
+.group:hover .group-hover\:block {
+    display: block
+}
 @media (min-width: 600px) {
     .sm\:w-auto {
         width: auto
@@ -451,6 +457,15 @@ body {
     }
 }
 @media (min-width: 960px) {
+    .lg\:absolute {
+        position: absolute
+    }
+    .lg\:relative {
+        position: relative
+    }
+    .lg\:right-0 {
+        right: 0px
+    }
     .lg\:-mx-4 {
         margin-left: -1rem;
         margin-right: -1rem
@@ -471,11 +486,20 @@ body {
     .lg\:hidden {
         display: none
     }
+    .lg\:w-48 {
+        width: 12rem
+    }
+    .lg\:max-w-xl {
+        max-width: 36rem
+    }
     .lg\:items-center {
         align-items: center
     }
     .lg\:justify-between {
         justify-content: space-between
+    }
+    .lg\:rounded {
+        border-radius: 0.25rem
     }
     .lg\:bg-transparent {
         background-color: transparent
